46
================

21/06/22 Refactor/split common out into html/validate/microchip js #1144
20/06/22 Annual figures section for non-shelter microchips implanted #1140
20/06/22 Re-implement mobile report criteria in new UI #1096
20/06/22 Fix error that can cause bad data to prevent the calendar loading
17/06/22 Prevent auto disabling of RescueGroups publisher due to transient 530
11/06/22 Stop edits to investigation records removing the person
10/06/22 Expired online forms are saved in the deletion log now
09/06/22 Fix images in PDFs: iif was causing both expressions to be evaluated
08/06/22 Revert validation fix, roles still need to be visible for super users
06/06/22 Allow font size to be chosen when printing mailing labels
05/06/22 Record the user-agent with online form submissions
02/06/22 Fix insurance not hiding from movements correctly when set to remove
02/06/22 Allow media to be moved to other animal/person records #822
01/06/22 Handle thumbnails for youtube.com/shorts URL format
01/06/22 Limit microchip fields to 15 chars
01/06/22 Implement "remember me" for mobile login #1096
23/05/22 Option to set the starting display of media tabs to table mode
21/05/22 Don't suggest state if city is blank
20/05/22 Updated Hebrew Translation (Saggi Neuemann)
20/05/22 Updated Swedish Translation (Carina Lekare)
17/05/22 Fix unicode bug when creating CSV files from publishers #1134
14/05/22 Audit and store auto-deleted online forms in the deletion log
14/05/22 Allow 15 slots for custom animal emblems (increase from 10)
12/05/22 Mobile login rewritten, fleshing out of new mobile interface #1096
11/05/22 csvimport: support ANIMALCOATTYPE (Peter Van Caeseele) #1132
10/05/22 Fix bug in medical regimens removing default values on load
09/05/22 Add cost per treatment for medical regimens/profiles #1095
06/05/22 Left align online form checkboxes on mobile
05/05/22 import PayPal CSV: allow payment type to be set per transaction #963